package zhw.designpattern.decorate.xunzai;

public abstract class SchoolReport {
    public abstract void report();
    public abstract void sign(String name);
}
